name:                lifted-async-pool
version:             0.0.1
synopsis:            Run lifted IO actions asynchronously in a pool.
homepage:            http://github.com/TerrorJack/lifted-async-pool
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.Async.Lifted.Pool
  build-depends:       base,
                       lifted-async,
                       SafeSemaphore
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TerrorJack/lifted-async-pool
